bk_ida/gccida/g0/expand_builtin_setjmp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp/src/builtins.c:1061:26: error: use of undeclared identifier 'machine_mode'
targeta = gen_reg_rtx( ( machine_mode)( BYTE5( integer_types[5]->block.abstract_origin) >> 1)); 
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_setjmp/src/obj/builtins.o] Error 1
